# sust-preli-2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  PORIDHI_DEPLOY.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  tmp_pytest.txt
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/schemas/: enums.py  request.py  response.py
app/services/: analyzer.py  classifier.py  evidence.py  router.py  safety.py  text_generator.py  transaction_matcher.py
app/services/llm/: client.py
app/utils/: bn_numerals.py  phone.py
samples/: sample_output_tkt001.json
scripts/: regenerate_sample.py  rewrite_runbook.py  smoke_test.py  verify_local.py  vm_setup.sh
tests/: test_edge_cases.py  test_health.py  test_safety.py  test_sample_cases.py  test_schema.py
