[project]
name = "queuestorm-investigator"
version = "1.0.0"
description = "QueueStorm Investigator API — SUST CSE Carnival 2026 Preli"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
llm = [
    "google-generativeai>=0.8.0",
    "openai>=1.57.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

# -----------------------------------------------------------------------------
# setuptools package discovery
# -----------------------------------------------------------------------------
# `samples/` was triggering "Multiple top-level packages discovered" on
# FastAPI Cloud's build backend (setuptools >=68 with strict auto-discovery)
# because it contains Python files alongside `app/`. We explicitly scope the
# distribution to the runtime package only — samples/, tests/, scripts/, and
# docs/ are intentionally NOT shipped as installable packages.
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["samples*", "tests*", "scripts*", "docs*"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
